--- a/Twitter Topic Modeling.ipynb
+++ b/Twitter Topic Modeling.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "True"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,28 +138,29 @@
      "output_type": "stream",
      "text": [
       "Before removing special characters: \n",
-      "blehhhhhhhhh way to early  *feels like puking* \n",
+      "goodnight nobody since i have no followers nobody can see me say this \n",
       "\n",
       "After special characters removed: \n",
-      "blehhhhhhhhh way to early  feels like puking \n"
+      "goodnight nobody since i have no followers nobody can see me say this \n"
      ]
     }
    ],
    "source": [
-    "def removeSpecialCharacter(text, remove_digits=False):\n",
+    "import re\n",
+    "def remove_special_character(text, remove_digits=False):\n",
     "    pattern = r'[^a-zA-z0-9\\s]' if not remove_digits else r'[^a-zA-z\\s]'\n",
     "    text = re.sub(pattern, '', text)\n",
     "    return text\n",
     "\n",
     "#this is the tweet that we will remove special characters from\n",
-    "doc_sample = documents[documents['index'] == 4312].values[0][0]\n",
+    "doc_sample = documents[documents['index'] == 2314].values[0][0]\n",
     "\n",
     "print('Before removing special characters: ')\n",
     "print(doc_sample)\n",
     "\n",
     "print('\\nAfter special characters removed: ')\n",
-    "doc_sample = removeSpecialCharacter(doc_sample, remove_digits=True)\n",
-    "print(doc_sample)"
+    "doc_sample = remove_special_character(doc_sample, remove_digits=True)\n",
+    "print(doc_sample)\n"
    ]
   },
   {
@@ -172,23 +173,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'his', \"needn't\", 'only', 'on', 'to', \"you'd\", 'are', \"haven't\", 'do', 'can', \"don't\", 'which', 'a', 'all', 'than', 'you', 'why', 'from', 'themselves', 'been', 'what', 'so', 'himself', 'this', 'other', 'that', 'not', 'those', 'i', 'them', 'y', 'does', 'again', 'her', 'myself', \"won't\", 'just', 'nor', 'they', 'between', \"couldn't\", \"it's\", 'ourselves', 'through', 'should', 'haven', 'but', 'these', 'more', 'with', 'hasn', 'shouldn', \"should've\", 'itself', 'further', 'wouldn', 'isn', 'have', \"shouldn't\", 'were', 'below', 'some', 'yourself', 'after', 'aren', \"didn't\", 'over', 'by', 've', 'm', 'above', 'it', 'then', 'very', 'she', 'no', 'hadn', 'how', 'here', \"weren't\", 'mightn', 'wasn', 'under', 'ain', 'own', 'needn', 'has', 'while', 'our', 'at', \"you'll\", 'mustn', 'because', 'when', \"hasn't\", 'and', 'yours', 'there', \"hadn't\", 'had', 'where', 'such', 'their', 'we', 'against', 'each', 'few', 'weren', 'he', 'into', \"mustn't\", 'during', 'ours', 'up', 'didn', 'before', 'until', 'most', \"aren't\", 'hers', 'did', \"mightn't\", 'for', 'don', 'doesn', \"you've\", \"that'll\", 'be', 'once', 'too', \"wouldn't\", 'is', \"she's\", 're', \"you're\", \"isn't\", 'any', 'him', 's', 'its', 'll', 'shan', 'your', 'was', 'if', 'out', 'in', 'couldn', 'doing', 'o', 'who', 'd', \"doesn't\", 'my', 'me', 'theirs', 'off', 'whom', 'both', 'about', 'ma', \"wasn't\", 'herself', 'yourselves', 'will', 'having', 'of', \"shan't\", 'same', 'being', 'now', 'down', 'won', 'or', 'am', 'as', 'the', 'an', 't'}\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     C:\\Users\\arcit\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data]   Package stopwords is already up-to-date!"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'herself', 'been', 'under', 'if', 'he', 'it', 'once', 'why', 'has', 'an', 'his', \"mightn't\", 'hers', 'have', 't', 'needn', 'should', 'during', 'on', 'very', 'had', 's', 'will', 'be', 'after', 'some', 'ours', 'not', 'at', 'again', 'such', 'their', 'because', 'out', 'mightn', 'am', 'to', \"it's\", 'who', 'me', 'our', 'a', 'theirs', 'down', 'both', 'weren', \"wasn't\", 'yourself', 'you', 'but', 'into', 'against', 'isn', 'before', 'doesn', 'were', 'hadn', 'off', 'shan', 'further', \"hasn't\", 'did', 'by', 'above', 'from', 'few', 'while', 'in', 'own', 'd', 'her', 'doing', 'm', \"needn't\", 'most', \"hadn't\", 'of', 'more', 'can', 'aren', 'those', 'when', 'do', 'ourselves', \"won't\", 'my', 'now', 'its', 'which', \"isn't\", 'we', \"you'd\", 'through', 'll', 'o', 'won', 'them', 'myself', \"you're\", 'here', 'there', 'up', 'each', 'where', \"mustn't\", \"couldn't\", 'is', 'nor', 'yourselves', 'and', \"weren't\", 'this', 'wasn', 'does', 'how', 'that', 'so', 'then', 'over', 'mustn', 'only', 'for', 'as', 'hasn', \"wouldn't\", 'no', 'couldn', 'itself', \"that'll\", 'these', 'are', 'she', 'until', 'any', 'y', 'don', 'himself', 'didn', 'ma', 'being', 'all', 'themselves', \"aren't\", 'they', 'or', 'between', 'the', \"shouldn't\", 've', 'i', 'than', \"you've\", 'yours', \"don't\", 'your', 'haven', 'ain', 'about', 'was', 'same', 're', 'what', 'whom', \"didn't\", 'him', \"doesn't\", 'having', 'just', 'other', 'wouldn', \"she's\", 'too', 'shouldn', 'below', \"shan't\", \"you'll\", \"haven't\", 'with', \"should've\"}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -212,16 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc_sample = documents[documents['index'] == 4310].values[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,15 +228,15 @@
      "output_type": "stream",
      "text": [
       "Before Tokenization: \n",
-      "blehhhhhhhhh way to early  feels like puking \n",
+      "goodnight nobody since i have no followers nobody can see me say this \n",
       "\n",
       "After Tokenization: \n",
-      "['blehhhhhhhhh', 'way', 'to', 'early', 'feels', 'like', 'puking']\n"
+      "['goodnight', 'nobody', 'since', 'i', 'have', 'no', 'followers', 'nobody', 'can', 'see', 'me', 'say', 'this']\n"
      ]
     }
    ],
    "source": [
-    "# Tokenize\n",
+    "# Tokenize - only applied to single tweet for showing \n",
     "from nltk.tokenize import word_tokenize\n",
     "\n",
     "tokens = word_tokenize(doc_sample)\n",
@@ -259,7 +258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Used this package \n",
+    "from nltk.tokenize.toktok import ToktokTokenizer\n",
+    "tokenizer = ToktokTokenizer()\n",
+    "stopword_list = nltk.corpus.stopwords.words('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -267,25 +278,27 @@
      "output_type": "stream",
      "text": [
       "Before removing stopwords: \n",
-      "['blehhhhhhhhh', 'way', 'to', 'early', 'feels', 'like', 'puking']\n",
+      "['goodnight', 'nobody', 'since', 'i', 'have', 'no', 'followers', 'nobody', 'can', 'see', 'me', 'say', 'this']\n",
       "\n",
       "After removing stopwords: \n",
-      "['blehhhhhhhhh', 'way', 'early', 'feels', 'like', 'puking']\n"
+      "goodnight, nobody, since, followers, nobody, see, say\n"
      ]
     }
    ],
    "source": [
-    "processed_sample = [w for w in tokens if not w in stop_words]\n",
-    "processed_sample = []\n",
-    "\n",
-    "for w in tokens:\n",
-    "    if w not in stop_words:\n",
-    "        processed_sample.append(w)\n",
+    "#Tokenize and remove stopwords\n",
+    "def remove_stopwords(text):\n",
+    "    tokens = word_tokenize(text)\n",
+    "    tokens = [token.strip() for token in tokens]\n",
+    "    filtered_tokens = [token for token in tokens if token not in stop_words]\n",
+    "    filtered_text = ', '.join(filtered_tokens)   \n",
+    "    return filtered_text\n",
     "\n",
     "print('Before removing stopwords: ')\n",
     "print(tokens)\n",
     "\n",
     "print('\\nAfter removing stopwords: ')\n",
+    "processed_sample = remove_stopwords(doc_sample)\n",
     "print(processed_sample)"
    ]
   },
@@ -304,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -312,10 +325,10 @@
      "output_type": "stream",
      "text": [
       "Before stemming: \n",
-      "['blehhhhhhhhh', 'way', 'early', 'feels', 'like', 'puking']\n",
+      "goodnight, nobody, since, followers, nobody, see, say\n",
       "\n",
       "After stemming: \n",
-      "['blehhhhhhhhh', 'way', 'earli', 'feel', 'like', 'puke']\n"
+      "goodnight, nobody, since, followers, nobody, see, say\n"
      ]
     }
    ],
@@ -324,19 +337,17 @@
     "\n",
     "porter = PorterStemmer()\n",
     "\n",
-    "def stemDocument(text):\n",
-    "    stem_document = []\n",
-    "    for word in processed_sample:\n",
-    "        stem_document.append(porter.stem(word))\n",
-    "    return stem_document\n",
+    "def text_stemmer(text):\n",
+    "    portStem = nltk.porter.PorterStemmer()\n",
+    "    text = ' '.join([portStem.stem(word) for word in text.split()])\n",
+    "    return text\n",
     "    \n",
     "print('Before stemming: ')\n",
     "print(processed_sample)\n",
     "\n",
     "print('\\nAfter stemming: ')\n",
-    "stemmed_doc = stemDocument(processed_sample)\n",
-    "print(stemmed_doc)\n",
-    "    "
+    "stemmed_doc = text_stemmer(processed_sample)\n",
+    "print(stemmed_doc)"
    ]
   },
   {
@@ -349,7 +360,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already up-to-date: nltk in c:\\users\\arcit\\anaconda3\\lib\\site-packages (3.5)\n",
+      "Requirement already satisfied, skipping upgrade: regex in c:\\users\\arcit\\anaconda3\\lib\\site-packages (from nltk) (2020.5.14)\n",
+      "Requirement already satisfied, skipping upgrade: click in c:\\users\\arcit\\anaconda3\\lib\\site-packages (from nltk) (7.1.2)\n",
+      "Requirement already satisfied, skipping upgrade: joblib in c:\\users\\arcit\\anaconda3\\lib\\site-packages (from nltk) (0.15.1)\n",
+      "Requirement already satisfied, skipping upgrade: tqdm in c:\\users\\arcit\\anaconda3\\lib\\site-packages (from nltk) (4.46.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -U nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "lemmatizer = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -357,29 +400,24 @@
      "output_type": "stream",
      "text": [
       "Before lemmatization: \n",
-      "['blehhhhhhhhh', 'way', 'early', 'feels', 'like', 'puking']\n",
+      "goodnight, nobody, since, followers, nobody, see, say\n",
       "\n",
       "After lemmatization: \n",
-      "['blehhhhhhhhh', 'way', 'early', 'feel', 'like', 'puking']\n"
+      "goodnight , nobody , since , follower , nobody , see , say\n"
      ]
     }
    ],
    "source": [
-    "from nltk.stem import WordNetLemmatizer\n",
-    "\n",
-    "wordnet_lemmatizer = WordNetLemmatizer()\n",
-    "\n",
-    "def lemmaDocument(text):\n",
-    "    lemma_document = []\n",
-    "    for word in processed_sample:\n",
-    "        lemma_document.append(wordnet_lemmatizer.lemmatize(word))\n",
-    "    return lemma_document\n",
+    "def text_lemmatizer(text):\n",
+    "    word_list = nltk.word_tokenize(text)\n",
+    "    lemmatized_text = ' '.join([lemmatizer.lemmatize(w) for w in word_list])\n",
+    "    return lemmatized_text\n",
     "\n",
     "print('Before lemmatization: ')\n",
     "print(processed_sample)\n",
     "\n",
     "print('\\nAfter lemmatization: ')\n",
-    "lemmatized_doc = lemmaDocument(processed_sample)\n",
+    "lemmatized_doc = text_lemmatizer(processed_sample)\n",
     "print(lemmatized_doc)"
    ]
   },
@@ -387,60 +425,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tokenizing and Lemmatizing all tweets in dataset\n",
-    "This is where we tokenize and lemmatize all tweets in the dataset"
+    "### Apply Text Preprocessing to the tweets\n",
+    "This is where we tokenize and lemmatize all tweets in the dataset.\n",
+    "\n",
+    "Note:\n",
+    "* On single text preprocessing(process per tweet), we stemmed and lemmatized the tweet separately to see the changes. Comparing the words that were stemmed and lemmatized, some of the words changed but some doesn't. \n",
+    "* I will combine all text preprocessing that we've done to make it simple. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0           [awww, that, bummer, shoulda, david, carr]\n",
-       "1    [upset, updat, facebook, text, result, school,...\n",
-       "2         [dive, time, ball, manag, save, rest, bound]\n",
-       "3                            [bodi, feel, itchi, like]\n",
-       "4                                              [behav]\n",
-       "5                                               [crew]\n",
-       "6                                               [need]\n",
-       "7                 [long, time, rain, fine, thank, how]\n",
-       "8                                        [nope, didnt]\n",
-       "9                                              [muera]\n",
-       "Name: Tweets, dtype: object"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the , bat , hanging , foot , 2193\n"
+     ]
     }
    ],
    "source": [
-    "# OLD STEMMING AND LEMMATIZATION\n",
+    "#text_sample = []\n",
+    "def prepare_text(text):\n",
+    "    special_character = remove_special_character(text)\n",
+    "    stop_words = remove_stopwords(special_character)\n",
+    "    stem_text = text_stemmer(stop_words)\n",
+    "    lemmatize_text = text_lemmatizer(stem_text)\n",
+    "    #text_sample.append(lemmatize_text)\n",
+    "    return lemmatize_text\n",
     "\n",
-    "def lemmatize_stemming(text):\n",
-    "    stemmer = PorterStemmer()\n",
-    "    return stemmer.stem(WordNetLemmatizer().lemmatize(text, pos='v'))\n",
-    "def preprocess(text):\n",
-    "    result = []\n",
-    "    for token in gensim.utils.simple_preprocess(text):\n",
-    "        result.append(lemmatize_stemming(token))\n",
-    "    return result\n",
+    "sample = 'The bat is hanging its feet for #2193@'\n",
     "\n",
-    "#doc_sample = documents[documents['index'] == 4312].values[0][0]\n",
-    "print('original document: ')\n",
-    "words = []\n",
-    "for word in doc_sample.split(' '):\n",
-    "    words.append(word)\n",
-    "print(words)\n",
-    "print('\\n\\n tokenized and lemmatized document: ')\n",
-    "print(preprocess(doc_sample))\n",
+    "print(prepare_text(sample))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "awww , thats , bummer , shoulda , got , david , carr , third , day\n",
+      "upset , cant , update , facebook , texting , might , cry , result , school , today , also , blah\n",
+      "dived , many , time , ball , managed , save , 50 , rest , go , bound\n",
+      "whole , body , feel , itchy , like , fire\n",
+      "behaving , im , mad , cant , see\n",
+      "whole , crew\n",
+      "need , hug\n",
+      "hey , long , time , see , yes , rain , bit , bit , lol , im , fine , thanks , how\n",
+      "nope , didnt\n",
+      "que , muera\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
     "\n",
-    "# Preprocessing each tweet and save them into processed_docs variable\n",
-    "processed_docs = documents['Tweets'].map(preprocess)\n",
-    "processed_docs[:10]"
+    "text_data = []\n",
+    "i = 0\n",
+    "with open('tweets-clean.csv', errors='ignore') as f:\n",
+    "    for line in f:\n",
+    "        tokens = prepare_text(line)\n",
+    "        if i < 10:\n",
+    "            print(tokens)\n",
+    "            i += 1\n",
+    "        text_data.append(tokens)"
    ]
   },
   {
