Finalized text processing

--- a/Twitter Text Processing.ipynb
+++ b/Twitter Text Processing.ipynb
@@ -27,12 +27,12 @@
    "metadata": {},
    "source": [
     "### Removing Special Characters\n",
-    "Special characters are noise to the tweets and has to be removed to lessen the noise. "
+    "Special characters are noise to the text and has to be removed to remove or lessen the noise. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -48,13 +48,15 @@
     }
    ],
    "source": [
+    "#re is regular expression operations library\n",
     "import re\n",
+    "\n",
     "def remove_special_character(text, remove_digits=False):\n",
     "    pattern = r'[^a-zA-z0-9\\s]' if not remove_digits else r'[^a-zA-z\\s]'\n",
     "    text = re.sub(pattern, '', text)\n",
     "    return text\n",
     "\n",
-    "#this is the tweet that we will remove special characters from\n",
+    "#this is the sample text that we will remove special characters from\n",
     "doc_sample = 'The cats are hanging their feet while playing $#?@!!'\n",
     "\n",
     "print('Before removing special characters: ')\n",
@@ -70,7 +72,7 @@
    "metadata": {},
    "source": [
     "### Removing Stop Words\n",
-    "Stop words are words that needs to be filtered before or after natural language processing. These are words that are most common in the sentence like \"a\", \"an\", \"the\", etc. "
+    "Stop words are words that needs to be filtered before or after natural language processing. These are words that are most common in the sentence like \"a\", \"an\", \"the\", etc. The stop words that is going to be removed in the text are printed below."
    ]
   },
   {
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -108,10 +110,13 @@
     }
    ],
    "source": [
-    "#download stopwords\n",
+    "#importing nltk library\n",
     "import nltk \n",
     "\n",
+    "#getting the list of stopwords from nltk library\n",
     "stopword_list = nltk.corpus.stopwords.words('english')\n",
+    "\n",
+    "#prints the list of stop words\n",
     "print(stopword_list)"
    ]
   },
@@ -120,12 +125,12 @@
    "metadata": {},
    "source": [
     "### Tokenization\n",
-    "Tokenization is chopping up sentences into pieces or words called tokens. "
+    "Tokenization is chopping up sentences into pieces or words called tokens. This process is necessary to be able to remove stop words.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -141,11 +146,13 @@
     }
    ],
    "source": [
-    "# Tokenize - only applied to single tweet for showing \n",
+    "#import word_tokenize which has the code to tokenize from nltk.tokenize\n",
     "from nltk.tokenize import word_tokenize\n",
     "\n",
+    "#store the tokenized text into tokens variable\n",
     "tokens = word_tokenize(doc_sample)\n",
     "\n",
+    "# Showing the before and after\n",
     "print('Before Tokenization: ')\n",
     "print(doc_sample)\n",
     "\n",
@@ -163,19 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Used this package \n",
+    "# Used ToktokTokenizer from nltk to tokenize text\n",
     "from nltk.tokenize.toktok import ToktokTokenizer\n",
-    "tokenizer = ToktokTokenizer()\n",
-    "stopword_list = nltk.corpus.stopwords.words('english')"
+    "\n",
+    "#set tokenizer as ToktokTokenizer\n",
+    "tokenizer = ToktokTokenizer()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -238,6 +246,7 @@
     }
    ],
    "source": [
+    "#used PorterStemmer from nltk to stem the text\n",
     "from nltk.stem import PorterStemmer\n",
     "\n",
     "porter = PorterStemmer()\n",
@@ -265,18 +274,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#use WordNetLemmatizer for lemmatization of text\n",
     "import nltk\n",
     "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "#set lemmatizer to WordNetLemmatizer\n",
     "lemmatizer = WordNetLemmatizer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -292,56 +304,70 @@
     }
    ],
    "source": [
+    "#function to lemmatize text\n",
     "def text_lemmatizer(text):\n",
     "    word_list = nltk.word_tokenize(text)\n",
     "    lemmatized_text = ' '.join([lemmatizer.lemmatize(w) for w in word_list])\n",
     "    return lemmatized_text\n",
     "\n",
+    "#showing the before and after\n",
     "print('Before lemmatization: ')\n",
     "print(processed_sample)\n",
     "\n",
     "print('\\nAfter lemmatization: ')\n",
     "lemmatized_doc = text_lemmatizer(processed_sample)\n",
-    "print(lemmatized_doc)"
+    "print(lemmatized_doc)\n",
+    "\n",
+    "#CHANGES\n",
+    "#cats became cat\n",
+    "#feet became foot"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Apply Text Preprocessing to the tweets\n",
-    "This is where we tokenize and lemmatize all tweets in the dataset.\n",
+    "### Apply Text Preprocessing to Twitter dataset\n",
+    "This is where we combine text processing to make changes to Twitter dataset. I created a function to be able to combine processes and apply the changes in one function calling.\n",
     "\n",
     "Note:\n",
-    "* On single text preprocessing(process per tweet), we stemmed and lemmatized the tweet separately to see the changes. Comparing the words that were stemmed and lemmatized, some of the words changed but some doesn't. \n",
-    "* I will combine all text preprocessing that we've done to make it simple. "
+    "* On single text preprocessing(sample text), we stemmed and lemmatized the tweet separately to see the changes. Comparing the words that were stemmed and lemmatized, some of the words changed but some doesn't.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Before text processing: \n",
+      "The bat is hanging its feet for #2193@\n",
+      "\n",
+      "After text processing: \n",
       "the , bat , hanging , foot , 2193\n"
      ]
     }
    ],
    "source": [
-    "#text_sample = []\n",
+    "#function that combined all text processes\n",
     "def prepare_text(text):\n",
     "    special_character = remove_special_character(text)\n",
     "    stop_words = remove_stopwords(special_character)\n",
     "    stem_text = text_stemmer(stop_words)\n",
     "    lemmatize_text = text_lemmatizer(stem_text)\n",
-    "    #text_sample.append(lemmatize_text)\n",
     "    return lemmatize_text\n",
     "\n",
+    "#sample text\n",
     "sample = 'The bat is hanging its feet for #2193@'\n",
     "\n",
+    "#to show changes\n",
+    "print('Before text processing: ')\n",
+    "print(sample)\n",
+    "\n",
+    "print('\\nAfter text processing: ')\n",
     "print(prepare_text(sample))"
    ]
   },
@@ -368,6 +394,8 @@
     }
    ],
    "source": [
+    "#importing csv file that has the tweets and process them\n",
+    "\n",
     "text_data = []\n",
     "i = 0\n",
     "with open('tweets-clean.csv', errors='ignore') as f:\n",
